[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures/menu_background.png" type="Texture" id=1]
[ext_resource path="res://styles/style_button_pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://font/roboto.tres" type="DynamicFont" id=3]
[ext_resource path="res://styles/style_button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://textures/polygon.png" type="Texture" id=5]
[ext_resource path="res://Menu.gd" type="Script" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="MenuContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 550.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/HSplitContainer"]
margin_right = 353.0
margin_bottom = 500.0
custom_constants/separation = 20
alignment = 1

[node name="LabelMenu" type="Label" parent="MenuContainer/HSplitContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 353.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Main Menu"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" type="Button" parent="MenuContainer/HSplitContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 353.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 164.251, 40.2051 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSelectLevel" type="Button" parent="MenuContainer/HSplitContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 353.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 164.251, 40.2051 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
custom_constants/hseparation = 0
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCredits" type="Button" parent="MenuContainer/HSplitContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 353.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 164.251, 40.2051 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
custom_constants/hseparation = 0
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer/HSplitContainer"]
margin_left = 361.0
margin_right = 924.0
margin_bottom = 500.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuContainer/HSplitContainer/MarginContainer"]
visible = false
margin_left = 100.0
margin_top = 220.0
margin_right = 463.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 3 )
text = "Title"
align = 1
valign = 2

[node name="Polygon" type="TextureRect" parent="MenuContainer/HSplitContainer/MarginContainer"]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = 463.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/HSplitContainer/MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 463.0
margin_bottom = 400.0
[connection signal="pressed" from="MenuContainer/HSplitContainer/VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="MenuContainer/HSplitContainer/VBoxContainer/ButtonSelectLevel" to="." method="_on_ButtonSelectLevel_pressed"]
